[proxima] replace spotbugs with error prone